<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.assignment4.MainActivity">


    <Button
        android:id="@+id/minus"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/minus"
        android:onClick="decrease"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/numIn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/seventeen"
        android:layout_width="73dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/sport"
        android:fontFamily="sans-serif"
        android:onClick="seventeenButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/twelve" />

    <TextView
        android:id="@+id/tv_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sport"
        android:textAlignment="center"
        android:textColor="@color/accentBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bottle"
 />

    <Button
        android:id="@+id/twelve"
        android:layout_width="79dp"
        android:layout_height="69dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bottle"
        android:fontFamily="sans-serif"
        android:onClick="twelveButton"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
/>

    <TextView
        android:id="@+id/tv_bottle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/twelve"
        android:layout_marginBottom="16dp"
        android:text="@string/bottle"
        android:textAlignment="center"
        android:textColor="@color/accentBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_sport"
        app:layout_constraintStart_toEndOf="@+id/tv_mug"
        />

    <Button
        android:id="@+id/eight"
        android:layout_width="77dp"
        android:layout_height="68dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/mug"
        android:fontFamily="sans-serif"
        android:onClick="eightButton"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twelve"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_mug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/mug"
        android:textAlignment="center"
        android:textColor="@color/accentBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tv_bottle"
 />

    <EditText
        android:id="@+id/numIn"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/accentBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/oz"
        app:layout_constraintEnd_toEndOf="@+id/plus"
        app:layout_constraintStart_toStartOf="@+id/plus" />

    <TextView
        android:id="@+id/oz"
        android:layout_width="27dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/oz"
        android:textColor="@color/mainBlue"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <Button
        android:id="@+id/plus"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/plus"
        android:onClick="increase"
        app:layout_constraintBottom_toBottomOf="@+id/numIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <ImageView
        android:id="@+id/glass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/water_glass"
        app:layout_constraintBottom_toTopOf="@+id/seventeen"
        app:layout_constraintEnd_toStartOf="@+id/numIn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <TextView
        android:id="@+id/goal"
        android:layout_width="353dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/water_message"
        android:textAlignment="center"
        android:textColor="@color/mainBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="336dp"
        android:layout_height="91dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</android.support.constraint.ConstraintLayout>
